--- a/index.html
+++ b/index.html
@@ -1,87 +1,34 @@
-<!doctype html>
-<!-- Website Template by freewebsitetemplates.com -->
+<!DOCTYPE html>
 <html>
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Bill's Professional Duck Carving</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="stylesheet" type="text/css" href="css/mobile.css" media="screen and (max-width : 568px)">
-	<script type="text/javascript" src="js/mobile.js"></script>
-</head>
-<body>
-	<div id="header">
-		<a href="index.html" class="logo">
-			<img src="images/DuckLogo.jpg" alt="" width="500" height="131";>
-		</a>
-		<ul id="navigation">
-			<li class="selected">
-				<a href="index.html">home</a>
-			</li>
-			<li>
-				<a href="about.html">about</a>
-			</li>
-			<li>
-				<a href="gallery.html">gallery</a>
-			</li>
-			<li>
-				<a href="blog.html">blog</a>
-			</li>
-			<li>
-				<a href="contact.html">contact</a>
-			</li>
-		</ul>
-	</div>
-	<div id="body">
-		<div id="featured">
-			<img src="images/FrontPageCarving.jpg" alt="">
-			<div>
-				<h2>Bill Daniels</h2>
-				<span>A master duck carver who currently</span>
-				<span>resides in Henderson, Louisiana. He has won</span>
-				<span>multiple awards and recognitions for his work.</span>
-				<a href="blog-single-post.html" class="more">read more</a>
-			</div>
-		</div>
-		<ul>
-			<li>
-				<a href="gallery.html">
-					<img src="images/WoodDrake.jpg" alt="" width="296" height="238">
-					<span>wood drake</span>
-				</a>
-			</li>
-			<li>
-				<a href="gallery.html">
-					<img src="images/RedBreastedMerganser.jpg" alt="" width="296" height="238">
-					<span>red-breasted merganser</span>
-				</a>
-			</li>
-			<li>
-				<a href="gallery.html">
-					<img src="images/RedHeadDrake.jpg" alt="" width="296" height="238">
-					<span>red head drake</span>
-				</a>
-			</li>
-		</ul>
-	</div>
-	<div id="footer">
-		<div>
-			<p>&copy; 2019 by Bill Daniels. All rights reserved.</p>
-			<ul>
-				<li>
-					<a href="http://freewebsitetemplates.com/go/twitter/" id="twitter">twitter</a>
-				</li>
-				<li>
-					<a href="http://freewebsitetemplates.com/go/facebook/" id="facebook">facebook</a>
-				</li>
-				<li>
-					<a href="http://freewebsitetemplates.com/go/googleplus/" id="googleplus">googleplus</a>
-				</li>
-				<li>
-					<a href="http://pinterest.com/fwtemplates/" id="pinterest">pinterest</a>
-				</li>
-			</ul>
-		</div>
-	</div>
-</body>
+    <head>
+        <title>Bill's Duck-Carving</title>
+        <meta name="description" content="A sample website for Bill Daniels' duck-carving business.">
+        <meta name="keywords" content="Bill, Daniels, duck, duck-carving, duckcarving, carving">
+        <meta name="author" content="William Daniels">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="index.css">
+    </head>
+    <body>
+        <div id="home">
+            <h1>Bill's Duck-Carving Services</h1>
+            <h4>
+                <em>Sample website for Bill Daniels</em>
+            </h4>
+            <h5>
+                <a href="#home">Home</a>
+                <a href="#about">About</a>
+                <a href="#work">Work</a>
+            </h5>
+        </div>
+        <div id="about">
+            <p>Bill Daniels, who currently<br>
+            resides in Henderson, Louisiana, <br>
+            is a master duck carver, winning multiple<br>
+            awards and recognitions for his work.</p>
+        </div>
+        <div id="work">
+            <img src="https://stevenjaysanford.files.wordpress.com/2013/08/66-sanded-with-150-grit-ready-for-sealer.jpg" width="500" height="300">
+            <img src="http://cdn.shopify.com/s/files/1/0812/2699/products/DCD605_grande.jpeg?v=1549118112" width="500" height="300">
+        </div>
+    </body>
 </html>
