--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Cinzel" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
 	<meta charset="UTF-8">
-	<title>Law Firm</title>
+	<title>Stan Gauthier, II | Law Corporation</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
