--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Cinzel" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
 	<meta charset="UTF-8">
-	<title>Stan Gauthier II Law Corporation</title>
+	<title>Stan Gauthier II, | Law Corporation</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 	<meta name="description" content="Website for attorney Stan Gauthier">
 	<meta name="keywords" content="Stan, Gauthier, Stan Gauthier, louisiana attorney, louisiana law, lafayette attorney, lafayette law firm">
@@ -15,7 +15,7 @@
 	<div id="header">
 		<div class="clearfix">
 			<div class="logo">
-				<h1>Stan Gauthier, II | Law Corporation<br></h1>
+				<h1>Stan Gauthier, II<br></h1>
 				<h3>A Law Corporation</h3>
 			</div>
 			<ul class="navigation">
