--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 				<h2>Contact Me</h2>
 				<p>
 					<span><strong>Phone |</strong></span> 337 234-0099 &nbsp;&nbsp;<span><strong>Fax |</strong></span> 337 234-0099<br>
-					<strong>Email | </strong><span>General Info:</span> info@gauthierlaw.com<br>
+					<strong>Email | </strong><span>General Info:</span> info@sgauthierlaw.com<br>
 					Send mail to webmaster@sgauthierlaw.com with questions or comments about this web site.
 				</p>
 			</div>
