--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Guidry & Guidry Law Firm</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
-		<meta name="keywords" content="" />
+		<meta name="keywords" content="guidry & guidry, guidry, law firm, legal, st. martinville, attorney, louisiana, daniel guidry, edmond guidry" />
 		<link rel="stylesheet" href="css/style.css" />
 		
 	</head>
