--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Guidry & Guidry Law Firm</title>
+		<title>Walter Rippas & Associates</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
-		<meta name="keywords" content="guidry & guidry, guidry, law firm, legal, st. martinville, attorney, louisiana, daniel guidry, edmond guidry" />
+		<meta name="keywords" content="walter j rippas, walter rippas, walter, rippas, associates, law firm, legal, broussard, attorney, louisiana, personal injury" />
 		<link rel="stylesheet" href="css/style.css" />
 		
 	</head>
@@ -12,9 +12,8 @@
 			<div class="wrapper style1">
 				<div id="banner">
 					<section class="container">
-						<h2>Guidry & Guidry</h2>
-						<span>Attorneys at Law</span>
-						<p><br><br><br></p>
+						<span>The Law Office of</span>
+						<h2>Walter Rippas & Associates</h2>
 					</section>
 				</div>
 			</div>
@@ -25,15 +24,15 @@
 						<div class="6u">
 							<a href="#" class="image"><img src="images/placeholder.png" alt=""></a>
 							<header class="major">
-								<h2>Daniel G. Guidry</h2>
-								<span class="byline">Description<br>and any other information<br>here.</span>
+								<h2>Walter J. Rippas</h2>
+								<span class="byline">Description and<br>any other information<br>here.</span>
 							</header>
 						</div>
 						<div class="6u">
 							<a href="#" class="image"><img src="images/placeholder.png" alt=""></a>
 							<header class="major">
-								<h2>Edmond L. Guidry III</h2>
-								<span class="byline">Description<br>and any other information<br>here.</span>
+								<h2>Other Attorney(s)</h2>
+								<span class="byline">Description and<br>any other information<br>here.</span>
 							</header>
 						</div>
 					</div>
@@ -44,7 +43,7 @@
 				<section class="container" id="areas">
 					<header class="major">
 						<h2>Areas of Law</h2>
-						<span class="byline">Our attorneys are experts in the types of law they deal with everyday.</span>
+						<span class="byline">Our attorneys are experts in the types of law they deal with everyday. <strong>(Examples)</strong></span>
 					</header>
 					<div class="row flush">
 						<div class="4u">
@@ -95,16 +94,16 @@
 				</header>
 				<ul id="phone-address">
 					<li>
-						<strong>Phone:</strong> (337) 394-7116
+						<strong>Phone:</strong> (337) 261-0667
 					</li>
 					<li>
-						<strong>Address:</strong> 324 S Main St, St Martinville, LA 70582
+						<strong>Address:</strong> 110 Marcon Dr Lafayette, LA 70507
 					</li>
 				</ul>
 				<div id="map"></div>
 					<script>
 						function initMap(){
-							var location = {lat: 30.120931, lng: -91.830311};
+							var location = {lat: 30.148588, lng: -91.963567};
 							var map = new google.maps.Map(document.getElementById("map"), {
 								zoom: 18,
 								center: location
@@ -122,8 +121,8 @@
 		<div id="footer">
 			<section class="container">
 				<ul class="icons">
-					<li class="active"><a href="https://www.facebook.com/" class="fa fa-facebook"><span>&nbsp&nbspFacebook</span></a></li>
-					<li><a href="https://twitter.com/" class="fa fa-twitter"><span>&nbsp&nbspTwitter</span></a></li>
+					<li class="active"><a href="https://www.facebook.com/pages/Law-Office-of-Walter-J-Rippas/146821558685200" class="fa fa-facebook" target="_blank"><span>&nbsp&nbspFacebook</span></a></li>
+					<li><a href="https://twitter.com/" class="fa fa-twitter" target="_blank"><span>&nbsp&nbspTwitter</span></a></li>
 				</ul>
 				<hr />
 			</section>
