--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Walter Rippas & Associates</title>
+		<title>Valerie Garrett Law</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
-		<meta name="keywords" content="walter j rippas, walter rippas, walter, rippas, associates, law firm, legal, broussard, attorney, louisiana, personal injury" />
 		<link rel="stylesheet" href="css/style.css" />
 		
 	</head>
-	<body class="homepage">
+	<body class="homepage">			
 			<div class="wrapper style1">
 				<div id="banner">
 					<section class="container">
-						<span>The Law Office of</span>
-						<h2>Walter Rippas & Associates</h2>
+						<h2>Valerie Garrett</h2>
+						<span>Family Law Attorney</span>
+						<p><br><br><br></p>
 					</section>
 				</div>
 			</div>
@@ -21,19 +21,12 @@
 			<div class="wrapper style2">
 				<section class="container">
 					<div class="row double">
+						<header class="major">
+							<h2>Valerie Gotch Garrett</h2>
+							<span class="byline">"I've been a practicing attorney in the Lafayette area for over 20 years. What sets me apart is <em>individuality</em>, which requires being personal with my clients."</span>
+						</header>
 						<div class="6u">
-							<a href="#" class="image"><img src="images/placeholder.png" alt=""></a>
-							<header class="major">
-								<h2>Walter J. Rippas</h2>
-								<span class="byline">Description and<br>any other information<br>here.</span>
-							</header>
-						</div>
-						<div class="6u">
-							<a href="#" class="image"><img src="images/placeholder.png" alt=""></a>
-							<header class="major">
-								<h2>Other Attorney(s)</h2>
-								<span class="byline">Description and<br>any other information<br>here.</span>
-							</header>
+							<a href="" class="image"><img src="images/valerie.png" alt=""></a>
 						</div>
 					</div>
 				</section>
@@ -42,45 +35,44 @@
 			<div class="wrapper style4">
 				<section class="container" id="areas">
 					<header class="major">
-						<h2>Areas of Law</h2>
-						<span class="byline">Our attorneys are experts in the types of law they deal with everyday. <strong>(Examples)</strong></span>
+						<span class="byline">Valerie is an expert in many areas of law, including:</span>
 					</header>
 					<div class="row flush">
 						<div class="4u">
 							<ul class="areas-list">
 								<li>
-									<h3>Contract Law</h3>
+									<h3>Custody Disputes</h3>
 								</li>
 								<li>
-									<h3>Family Law</h3>
+									<h3>Other area here</h3>
 								</li>
 								<li>
-									<h3>Finance Law</h3>
+									<h3>Other area here</h3>
 								</li>
 							</ul>
 						</div>
 						<div class="4u">
 							<ul class="areas-list">
 								<li>
-									<h3>Intellectual Property</h3>
+									<h3>Child Support</h3>
 								</li>
 								<li>
-									<h3>Property Law</h3>
+									<h3>Other area here</h3>
 								</li>
 								<li>
-									<h3>Patents</h3>
+									<h3>Other area here</h3>
 								</li>
 						</div>
 						<div class="4u">
 							<ul class="areas-list">
 								<li>
-									<h3>Tax Law</h3>
+									<h3>Divorce Law</h3>
 								</li>
 								<li>
-									<h3>Consulting</h3>
+									<h3>Other area here</h3>
 								</li>
 								<li>
-									<h3>Litigation</h3>
+									<h3>Other area here</h3>
 								</li>
 						</div>
 					</div>
@@ -90,20 +82,20 @@
 		<div class="wrapper style3">
 			<section class="container">
 				<header class="major" id="contact-us">
-					<h2>Contact Us</h2>
+					<h2>Contact Me</h2>
 				</header>
 				<ul id="phone-address">
 					<li>
-						<strong>Phone:</strong> (337) 261-0667
+						<strong>Phone:</strong> (337) 232-1600
 					</li>
 					<li>
-						<strong>Address:</strong> 110 Marcon Dr Lafayette, LA 70507
+						<strong>Address:</strong> 701 North Pierce B, Lafayette, LA 70501
 					</li>
 				</ul>
 				<div id="map"></div>
 					<script>
 						function initMap(){
-							var location = {lat: 30.148588, lng: -91.963567};
+							var location = {lat: 30.242448, lng: -92.019064};
 							var map = new google.maps.Map(document.getElementById("map"), {
 								zoom: 18,
 								center: location
@@ -121,8 +113,7 @@
 		<div id="footer">
 			<section class="container">
 				<ul class="icons">
-					<li class="active"><a href="https://www.facebook.com/pages/Law-Office-of-Walter-J-Rippas/146821558685200" class="fa fa-facebook" target="_blank"><span>&nbsp&nbspFacebook</span></a></li>
-					<li><a href="https://twitter.com/" class="fa fa-twitter" target="_blank"><span>&nbsp&nbspTwitter</span></a></li>
+					<li class="active"><a href="https://www.facebook.com/ValerieGotchGarrettAPLC/?rf=219001944914959" class="fa fa-facebook"><span>&nbsp&nbspFacebook</span></a></li>
 				</ul>
 				<hr />
 			</section>
