--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Valerie Garrett Law</title>
+		<title>Keith Thibodeaux Law</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<link rel="stylesheet" href="css/style.css" />
@@ -11,8 +11,8 @@
 			<div class="wrapper style1">
 				<div id="banner">
 					<section class="container">
-						<h2>Valerie Garrett</h2>
-						<span>Family Law Attorney</span>
+						<h2>Keith Thibodeaux</h2>
+						<span>Attorney at Law</span>
 						<p><br><br><br></p>
 					</section>
 				</div>
@@ -22,11 +22,11 @@
 				<section class="container">
 					<div class="row double">
 						<header class="major">
-							<h2>Valerie Gotch Garrett</h2>
-							<span class="byline">"I've been a practicing attorney in the Lafayette area for over 20 years. What sets me apart is <em>individuality</em>, which requires being personal with my clients."</span>
+							<h2>Keith Thibodeaux</h2>
+							<span class="byline">Quote or description of you here. Quote or description of you here. Quote or description of you here. Quote or description of you here.</span>
 						</header>
 						<div class="6u">
-							<a href="" class="image"><img src="images/valerie.png" alt=""></a>
+							<a href="" class="image"><img src="images/placeholder.png" alt="" width="300" height="450"></a>
 						</div>
 					</div>
 				</section>
@@ -35,13 +35,13 @@
 			<div class="wrapper style4">
 				<section class="container" id="areas">
 					<header class="major">
-						<span class="byline">Valerie is an expert in many areas of law, including:</span>
+						<span class="byline">Keith is an expert in many areas of law, including:</span>
 					</header>
 					<div class="row flush">
 						<div class="4u">
 							<ul class="areas-list">
 								<li>
-									<h3>Custody Disputes</h3>
+									<h3>Law area here</h3>
 								</li>
 								<li>
 									<h3>Other area here</h3>
@@ -54,7 +54,7 @@
 						<div class="4u">
 							<ul class="areas-list">
 								<li>
-									<h3>Child Support</h3>
+									<h3>Law area here</h3>
 								</li>
 								<li>
 									<h3>Other area here</h3>
@@ -66,7 +66,7 @@
 						<div class="4u">
 							<ul class="areas-list">
 								<li>
-									<h3>Divorce Law</h3>
+									<h3>Law area here</h3>
 								</li>
 								<li>
 									<h3>Other area here</h3>
@@ -82,20 +82,20 @@
 		<div class="wrapper style3">
 			<section class="container">
 				<header class="major" id="contact-us">
-					<h2>Contact Me</h2>
+					<h2>Contact</h2>
 				</header>
 				<ul id="phone-address">
 					<li>
-						<strong>Phone:</strong> (337) 232-1600
+						<strong>Phone:</strong> (337) 394-3034
 					</li>
 					<li>
-						<strong>Address:</strong> 701 North Pierce B, Lafayette, LA 70501
+						<strong>Address:</strong> 422 S Main St, St Martinville, LA 70582
 					</li>
 				</ul>
 				<div id="map"></div>
 					<script>
 						function initMap(){
-							var location = {lat: 30.242448, lng: -92.019064};
+							var location = {lat: 30.119613, lng: -91.830789};
 							var map = new google.maps.Map(document.getElementById("map"), {
 								zoom: 18,
 								center: location
@@ -113,7 +113,7 @@
 		<div id="footer">
 			<section class="container">
 				<ul class="icons">
-					<li class="active"><a href="https://www.facebook.com/ValerieGotchGarrettAPLC/?rf=219001944914959" class="fa fa-facebook"><span>&nbsp&nbspFacebook</span></a></li>
+					<li class="active"><a href="https://www.facebook.com/pages/Keith-E-Thibodeaux/158358090862551" class="fa fa-facebook"><span>&nbsp&nbspFacebook</span></a></li>
 				</ul>
 				<hr />
 			</section>
